init publish step